@@ -198,6 +198,11 @@ sub ShouldSkipType
     return 1 if $typeInfo->signature->name =~ /getSVGDocument/;
 
     return 1 if $typeInfo->signature->name =~ /Constructor/;
+    
+    # FIXME: This is typically used to add script execution state arguments to the method.
+    # These functions will not compile with the C++ bindings as is, so disable them
+    # to restore compilation until a proper implementation can be developed.
+    return 1 if $typeInfo->signature->extendedAttributes->{"CallWith"};
     return 0;
 }
 
@@ -459,7 +464,7 @@ sub GenerateHeader
     if ($numFunctions > 0) {
         foreach my $function (@{$dataNode->functions}) {
             next if ShouldSkipType($function);
-            my $functionName = $function->signature->name;
+            my $functionName = $function->signature->extendedAttributes->{"ImplementedAs"} || $function->signature->name;
 
             my $returnType = GetCPPType($function->signature->type, 0);
             my $numberOfParameters = @{$function->parameters};
